ipc/ipdl/test/ipdl/error/IntrAsyncManagee.ipdl
include protocol IntrAsyncManager;

intr protocol IntrAsyncManagee {
    manager IntrAsyncManager;
child:
    async __delete__();
};
